--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,6 @@
 body {
   font-size: 14px;
   color: #000;  
-  background-color: #dedfde;
   font-family: sans, sans-serif, Arial;
   height: 100%;
   margin: 0;
@@ -39,6 +38,11 @@ p {
   text-decoration: none;
 }
 
+a li.problemtype {
+  text-decoration: none;
+  color: #fff;
+}
+
 .header {
   background-color: #42444f;
   color: #acadb1;
@@ -63,10 +67,8 @@ p {
 }
 
 .content {
-  background-color: #fff;
-  display: table;
+  background-color: #ddd;
   width: 100%;
-  height: 560px;
 }
 
 .content a {
@@ -76,21 +78,22 @@ p {
 
 .leftmenu {
   float: left;
-  width: 25%;
   background-color: #ddd;
+  width: 25%;
   height: 100%;
   overflow-y: auto;
   display: inherit;
 }
 
 .main {
-  width: 70%;
   height: 100%;
   overflow-y: auto;
   text-align: justify;
+  padding: 20px;
+  background-color: #fff;
 }
 
-.textarea {
+textarea {
   margin-left: 10%;
   margin-right: 10%;
 }
@@ -170,10 +173,11 @@ tr.historytable td {
   text-align:center;  
 }
 
-tr.historytable:nth-child(even) td {
+tr.historytable:nth-child(odd) td {
   text-align:center;  
-  background-color: #ddd;
+  background-color: #dedfde;
 }
+
 
 ul#menu li,ul#menu {
   list-style-type: none;
@@ -405,6 +409,7 @@ a.createlink {
 
 img {
   border: 0;
+  max-width: 100%;
 }
 
 span.miniedit {
@@ -1230,58 +1235,123 @@ div.faqtoc div.faq p.question *,#wikibody .pagegroup {
   color: #000;
 }
 
-@media only screen and max-width800px {
-  .header_left_box,.header .avatar {
-    float: none;
-  }
+#main-box-left {
+  float: left;
+  width: 45%;
+  height: 580px;
+  border-style:solid;
+  border-color: 000;
+  padding-left: 10px;
+  padding-right:10px;
+}
 
-  .header_right_box {
-    width: 100%;
-    background-color: #1E2029;
-  }
+#main-box-right {
+  float: left;
+  width: 45%;
+  height: 580px;
+  margin-left: 10px;
+  border-style:solid;
+  border-color: 000;
+  padding-left: 10px;
+  padding-right:10px;
+}
 
-  ul#menu li {
-    width: 100%;
-    text-align: center;
-    margin-left: 0;
-  }
 
-  ul#menu li a {
-    display: block;
-  }
+#main-box ul, #main-box ol {
+  margin: 0;
+  padding-left: 20px;
+}
 
-  ul#menu li ul.sub-menu {
-    display: block;
-    position: relative;
-    top: 0;
-  }
+a#mandatory_problems, a#suggested_problems {
+  text-decoration: none;
+} 
 
-  ul#menu li ul.sub-menu li {
-    font-size: 12px;
-    background-color: #4a4c55;
-  }
-
-  ul#menu li.active ul.sub-menu li {
-    background-color: #2C2F3B;
-  }
-
-  ul#menu ul.sub-menu {
-    padding-bottom: 0;
+@media screen and (min-width: 900px) {
+  #main-box {
+    margin: 0 auto;
+    width: 900px;
   }
 }
 
-@media print {
-  body {
-    width: auto;
-    margin: 0;
-    padding: .5em;
+@media screen and (max-width: 800px) {
+  .header_right_box ul#menu {
+    display: inline-flex;
   }
 
-  #wikihead,#wikileft,#wikicmds,.footnav {
+  .header_right_box, .header_left_box {
+    float: none;
+    text-align: center;
+  }
+
+  .header_right_box {
+    background-color: #000;
+  }
+
+  .header_right_box ul#menu li a {
+    color: #fff;
+  }
+
+  table.ranking {
+    padding-left: 0;
+  }
+  
+  .header_left_box ul#menu li {
+    width: 100vw;
+  }
+
+  ul#menu li ul.sub-menu {
+    position: relative;
+    top: 0
+  }
+
+  ul#menu li ul.sub-menu {
+    background-color: #000;
+  }
+
+  ul#menu li ul.sub-menu a {
+    color: #fff;
+  }
+
+  #main-box-left, #main-box-right {
+    float: none;
+    width: 85vw;
+    height: inherit;
+    border-style:solid;
+    margin-left: 0;
+    border-color: 000;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+  }
+
+ .leftmenu {
+    width: 100vw;
+  }
+
+  .leftmenu .problem-title {
     display: none;
   }
 
-  #wikifoot {
-    padding: 2px;
+  .chevron::after {
+    border-style: solid;
+    float: right;
+    margin-right: 20px;
+    border-width: 0.25em 0.25em 0 0;
+    content: '';
+    display: inline-block;
+    height: 0.45em;
+    left: 0.15em;
+    position: relative;
+    top: 0;
+    transform: rotate(135deg);
+    vertical-align: top;
+    width: 0.45em;
   }
+
+  .chevron.toggled::after {
+    top: 0.15em;
+    transform: rotate(-45deg);
+  }
+
 }
