--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,10 @@ h1,h2,h3 {
   margin-bottom: 40px;
 }
 
+.forum {
+  width: 100%;
+}
+
 pre code,code code,pre pre,h1 code,h2 code,h3 code,h4 code,h5,h6 {
   font-size: 100%;
 }
@@ -628,6 +632,8 @@ pre,code {
 
 pre {
   line-height: 1.2em;
+  padding: 2px;
+  white-space: pre-wrap;
 }
 
 h1,h2,h3,h4,h5,h6 {
