--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1185,9 +1185,11 @@ ul#menu li:hover ul.sub-menu,.cpp span.xtra {
 
 .login-default-box,.login-facebook-box,.register-default-box,.register-facebook-box {
   display: inline-block;
-  width: 100%;
   padding-left: 1%;
   vertical-align: top;
+	border: 1px solid #acadb1;
+	padding: 0 20px 20px 20px;
+	border-radius: 8px;
 }
 
 div.faqtoc div.faq *,#wikicmds li a.createlink,#quickref input[name="quickref"] + table {
